@@ -1,8 +1,12 @@
 package com.unla.ghsicilianotfi.services.implementation;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.modelmapper.ModelMapper;
+import org.springframework.dao.DataAccessException;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 
 import com.unla.ghsicilianotfi.entities.Person;
@@ -12,14 +16,17 @@ import com.unla.ghsicilianotfi.services.IPersonService;
 
 
 @Service("personService")
+@SuppressWarnings("unused")
 public class PersonService implements IPersonService {
+	private static final Logger logger = LoggerFactory.getLogger(PersonService.class);
 
-	private IPersonRepository personRepository;
+	private final IPersonRepository personRepository;
 
-	private ModelMapper modelMapper = new ModelMapper();
+	private final ModelMapper modelMapper;
 
-	public PersonService(IPersonRepository personRepository) {
+	public PersonService(IPersonRepository personRepository, ModelMapper modelMapper) {
 		this.personRepository = personRepository;
+		this.modelMapper = modelMapper;
 	}
 
 	@Override
@@ -37,20 +44,24 @@ public class PersonService implements IPersonService {
 		try {
 			personRepository.deleteById(id);
 			return true;
-		}catch (Exception e) {
+		} catch (EmptyResultDataAccessException | DataIntegrityViolationException e) {
+			logger.warn("Could not remove Person with id {}", id, e);
+			return false;
+		} catch (DataAccessException e) {
+			logger.error("Database error while removing Person with id {}", id, e);
 			return false;
 		}
 	}
 
 	@Override
-	public Optional<Person> findById(int id) throws Exception {
+	public Optional<Person> findById(int id) {
 		return personRepository.findById(id);
 	}
 
 	@Override
-	public Person findByName(String name) throws Exception {
+	public Person findByName(String name) {
 		return personRepository.findByName(name).orElseThrow(
-				() -> new Exception("ERROR no existe Persona con Nombre: " + name)
+				() -> new IllegalArgumentException("ERROR: Person not found with name: " + name)
 		);
 	}
 
@@ -59,6 +70,6 @@ public class PersonService implements IPersonService {
 		return personRepository.findByDegreeName(degreeName)
 				.stream()
 				.map(person -> modelMapper.map(person, PersonDTO.class))
-				.collect(Collectors.toList());
+				.toList();
 	}
 }
